[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/buy cards/architect 1.png" type="Texture" id=1]
[ext_resource path="res://game/map_creation/BuyCard.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 163.174, 260.472 )

[node name="BuyCard" type="Node2D"]
scale = Vector2( 0.34, 0.34 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.41809, 0.573853 )
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
